fix: absolute center alignment with h-screen and tailwind import

--- a/app/globals.css
+++ b/app/globals.css
@@ -1,15 +1,15 @@
 /* app/globals.css */
 
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
 html,
 body {
   padding: 0;
   margin: 0;
   height: 100%;
   width: 100%;
-  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
-    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
-  background-color: #f9fafb; /* gray-50 */
-  color: #000000;
 }
 
 * {
